.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:22:17 **** Incremental Build of configuration Debug for project Camera ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/LED.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F767xx -DDEBUG -c -I../Drivers/CMSIS/Include -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/LED.d" -MT"Core/Src/LED.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/LED.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F767xx -DDEBUG -c -I../Drivers/CMSIS/Include -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:23:0:
../Core/Inc/LED.h:16:13: error: unknown type name 'LED_Defines'
 void on_LED(LED_Defines LED);
             ^~~~~~~~~~~
In file included from ../Core/Src/LED.c:7:0:
../Core/Inc/LED.h:16:13: error: unknown type name 'LED_Defines'
 void on_LED(LED_Defines LED);
             ^~~~~~~~~~~
../Core/Inc/LED.h:17:14: error: unknown type name 'LED_Defines'
 void off_LED(LED_Defines LED)
              ^~~~~~~~~~~
../Core/Inc/LED.h:26:2: warning: data definition has no type or storage class
 }LED_Defines;
  ^~~~~~~~~~~
../Core/Inc/LED.h:26:2: warning: type defaults to 'int' in declaration of 'LED_Defines' [-Wimplicit-int]
../Core/Src/main.c: In function 'main':
../Core/Inc/LED.h:17:14: error: unknown type name 'LED_Defines'
 void off_LED(LED_Defines LED)
              ^~~~~~~~~~~
../Core/Inc/LED.h:26:2: warning: data definition has no type or storage class
 }LED_Defines;
  ^~~~~~~~~~~
../Core/Inc/LED.h:26:2: warning: type defaults to 'int' in declaration of 'LED_Defines' [-Wimplicit-int]
../Core/Src/main.c:106:3: warning: implicit declaration of function 'on_LED' [-Wimplicit-function-declaration]
   on_LED(0);
   ^~~~~~
../Core/Src/LED.c:32:17: error: expected declaration specifiers or '...' before 'LED_Defines'
 void toggle_LED(LED_Defines LED){
                 ^~~~~~~~~~~
../Core/Src/LED.c:44:13: error: expected declaration specifiers or '...' before 'LED_Defines'
 void on_LED(LED_Defines LED){
             ^~~~~~~~~~~
../Core/Src/LED.c:56:14: error: expected declaration specifiers or '...' before 'LED_Defines'
 void off_LED(LED_Defines LED){
              ^~~~~~~~~~~
../Core/Src/main.c:108:3: warning: implicit declaration of function 'off_LED'; did you mean 'toggle_LED'? [-Wimplicit-function-declaration]
   off_LED(0);
   ^~~~~~~
   toggle_LED
make: *** [Core/Src/subdir.mk:36: Core/Src/LED.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:38: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
12:22:57 **** Incremental Build of configuration Debug for project Camera ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/LED.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F767xx -DDEBUG -c -I../Drivers/CMSIS/Include -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/LED.d" -MT"Core/Src/LED.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/LED.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F767xx -DDEBUG -c -I../Drivers/CMSIS/Include -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/LED.c:7:0:
../Core/Inc/LED.h:16:13: error: unknown type name 'LED_Defines'
 void on_LED(LED_Defines LED);
             ^~~~~~~~~~~
In file included from ../Core/Src/main.c:23:0:
../Core/Inc/LED.h:16:13: error: unknown type name 'LED_Defines'
 void on_LED(LED_Defines LED);
             ^~~~~~~~~~~
../Core/Inc/LED.h:17:14: error: unknown type name 'LED_Defines'
 void off_LED(LED_Defines LED);
              ^~~~~~~~~~~
../Core/Inc/LED.h:17:14: error: unknown type name 'LED_Defines'
 void off_LED(LED_Defines LED);
              ^~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:106:3: warning: implicit declaration of function 'on_LED' [-Wimplicit-function-declaration]
   on_LED(0);
   ^~~~~~
../Core/Src/main.c:108:3: warning: implicit declaration of function 'off_LED'; did you mean 'toggle_LED'? [-Wimplicit-function-declaration]
   off_LED(0);
   ^~~~~~~
   toggle_LED
make: *** [Core/Src/subdir.mk:36: Core/Src/LED.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:38: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
12:23:29 **** Incremental Build of configuration Debug for project Camera ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/LED.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F767xx -DDEBUG -c -I../Drivers/CMSIS/Include -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/LED.d" -MT"Core/Src/LED.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/LED.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F767xx -DDEBUG -c -I../Drivers/CMSIS/Include -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Camera.elf" @"objects.list"   -mcpu=cortex-m7 -T"D:\Camera Project\Temporary_Project\Camera\STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Camera.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Camera.elf
 
arm-none-eabi-objdump -h -S  Camera.elf  > "Camera.list"
arm-none-eabi-objcopy  -O binary  Camera.elf  "Camera.bin"
arm-none-eabi-size   Camera.elf 
   text	   data	    bss	    dec	    hex	filename
  14288	     20	   1772	  16080	   3ed0	Camera.elf
Finished building: default.size.stdout
 
Finished building: Camera.bin
 
Finished building: Camera.list
 
